_less/screen.less
/* ... */
.highlight .kd { font-weight: bold } /* Keyword.Declaration */
.highlight .kp { font-weight: bold } /* Keyword.Pseudo */
.highlight .kr { font-weight: bold } /* Keyword.Reserved */
.highlight .kt { color: #445588; font-weight: bold } /* Keyword.Type */
.highlight .m { color: #009999 } /* Literal.Number */
.highlight .s { color: #d14 } /* Literal.String */
.highlight .na { color: #008080 } /* Name.Attribute */
.highlight .nb { color: #0086B3 } /* Name.Builtin */
.highlight .nc { color: #445588; font-weight: bold } /* Name.Class */
.highlight .no { color: #008080 } /* Name.Constant */
.highlight .ni { color: #800080 } /* Name.Entity */
.highlight .ne { color: #990000; font-weight: bold } /* Name.Exception */
.highlight .nf { color: #990000; font-weight: bold } /* Name.Function */
.highlight .nn { color: #555555 } /* Name.Namespace */
.highlight .nt { color: #000080 } /* Name.Tag */
.highlight .nv { color: #008080 } /* Name.Variable */
.highlight .ow { font-weight: bold } /* Operator.Word */
.highlight .w { color: #bbbbbb } /* Text.Whitespace */
.highlight .mf { color: #009999 } /* Literal.Number.Float */
.highlight .mh { color: #009999 } /* Literal.Number.Hex */
.highlight .mi { color: #009999 } /* Literal.Number.Integer */
.highlight .mo { color: #009999 } /* Literal.Number.Oct */
.highlight .sb { color: #d14 } /* Literal.String.Backtick */
.highlight .sc { color: #d14 } /* Literal.String.Char */
.highlight .sd { color: #d14 } /* Literal.String.Doc */
.highlight .s2 { color: #d14 } /* Literal.String.Double */
.highlight .se { color: #d14 } /* Literal.String.Escape */
.highlight .sh { color: #d14 } /* Literal.String.Heredoc */
.highlight .si { color: #d14 } /* Literal.String.Interpol */
.highlight .sx { color: #d14 } /* Literal.String.Other */
.highlight .sr { color: #009926 } /* Literal.String.Regex */
.highlight .s1 { color: #d14 } /* Literal.String.Single */
.highlight .ss { color: #990073 } /* Literal.String.Symbol */
.highlight .bp { color: #999999 } /* Name.Builtin.Pseudo */
.highlight .vc { color: #008080 } /* Name.Variable.Class */
.highlight .vg { color: #008080 } /* Name.Variable.Global */
.highlight .vi { color: #008080 } /* Name.Variable.Instance */
.highlight .il { color: #009999 } /* Literal.Number.Integer.Long */

.bggreen {
      background-color: #006400;
}

.bgred {
      background-color: #8B0000;
}

.bgyellow {
      background-color: #B8860B;
}

.fggreen {
      color: #006400;
}

.fgred {
      color: #8B0000;
}

.fgyellow {
      color: #B8860B;
}

.box{
	border:2px dashed #4892b2;
	padding:0 20px 0 20px;
}
.boxexpand{
	overflow:hidden;
	-moz-transition:height 400ms ease-out;
	-webkit-transition:height 400ms ease-out;
	transition:height 400ms ease-out;
}
.boxexpand>*{
	display:none;
}
.boxexpand>h3:first-child{
	display:block;
	margin:20px 0;
}
.boxexpand>h3:first-child a:link,
.boxexpand>h3:first-child a:visited,
.boxexpand>h3:first-child a:active{
	text-decoration:none;
}
.boxexpand.expanded>*{
	display:block;
}

.titlelight{
	color:#8c8c8c;
}

.tablehalf{
	width:885px;
	position:relative;
	left:-40px;
}
.tablehalf div{
	display:inline-block;
	width:400px;
	vertical-align:top;
	margin-left:40px;
	margin-bottom:20px;
}
.tablehalf img{
	width:400px;
	height:220px;
	-webkit-border-radius:10px;
	-moz-border-radius:10px;
	border-radius:10px;
}
.tablehalf h2 img{
	width:auto;
	height:auto;
}
.tablehalf p{
	text-align:left;
}
.contributors{
	width:890px;
	text-align:left;
	font-size:80%;
}
.contributors img{
	width:16px;
	height:16px;
}
.contributors div{
	padding:8px 0;
	width:215px;
	overflow:hidden;
	display:inline-block;
	vertical-align:top;
}
.contributors div div{
	width:auto;
	padding:0;
}
.contributors div div:first-child+div{
	max-width:150px;
	margin:0 2px;
	white-space:nowrap;
}

.credit{
	text-align:left;
	margin:-10px 0;
}
.credit p{
	display:inline-block;
	width:275px;
	vertical-align:top;
	margin:10px 0;
}
.credit span{
	display:block;
	color:#aaa;
}

.resources{
	text-align:left;
}
.resources>div{
	border-top:1px solid #e0e0e0;
}
.resources>div:first-child{
	border-top:0;
}
.resources div div{
	display:inline-block;
	width:380px;
	vertical-align:top;
	padding:10px 0 25px 0;
	min-height:200px;
}
.resources>div>div:first-child{
	padding-right:40px;
	border-right:1px solid #e0e0e0;
}
.resources>div>div:first-child+div{
	padding-left:40px;
	border-left:1px solid #e0e0e0;
	margin-left:-1px;
}
.resources div div div{
	display:block;
	width:auto;
}
.resources p{
	font-size:115%;
	margin:6px 0;
}

.resourcesorg{
	margin-bottom:40px;
	text-align:left;
	font-size:0;
}
.resourcesorg div{
	border-top:1px solid #e0e0e0;
}
.resourcesorg div:first-child,.resourcesorg div div{
	border-top:0;
}
.resourcesorg div div{
	width:278px;
	font-size:16px;
	display:inline-block;
	vertical-align:top;
}
.resourcesorg img{
	margin-right:5px;
	width:24px;
	height:24px;
	position:relative;
	bottom:-6px;
}

.resourcesmore{
	text-align:center;
	margin-top:40px;
}
.resourcesmore div{
	display:inline-block;
	text-align:left;
	padding:20px 40px;
	border-top:1px solid #e0e0e0;
	border-left:1px solid #e0e0e0;
	border-right:1px solid #e0e0e0;
}
.resourcesmore div h2{
	text-align:center;
	margin-bottom:25px;
}
.resourcesmore div p{
	font-size:115%;
	margin:6px 0;
}

.coredevtable div div:first-child{
	width:200px;
}
.coredevtable div div:first-child+div{
	width:220px;
}
.coredevtable div div:first-child+div+div{
	width:80px;
}

.chatbox{
	text-align:center;
}

.devprojectlist{
	overflow:hidden;
	margin:-10px 0;
	-moz-transition:height 400ms ease-out;
	-webkit-transition:height 400ms ease-out;
	transition:height 400ms ease-out;
}
.devprojectlist li{
	margin:10px 0;
}
.devprojectlist li:nth-child(1n+4){
	display:none;
}
.devprojectlist.expanded li:nth-child(1n+4){
	display:list-item;
}
.devprojectlist li.more{
	display:block;
}
.devprojectlist.expanded li.more{
	display:none;
}
.devprojectlist a{
	display:inline-block;
	margin-top:5px;
}
/* ... */

